# k8s-postcheck

./: .gitignore  README.md  pyproject.toml
examples/: config.example.yaml
k8s_postcheck/: __init__.py  auth.py  cli.py  models.py  report.py
k8s_postcheck/checks/: __init__.py  _util.py  certs.py  etcd.py  helm_releases.py  nodes.py  system_pods.py  velero.py
tests/: conftest.py  test_certs.py  test_cli_helpers.py  test_etcd.py  test_helm_releases.py  test_nodes.py  test_report.py  test_system_pods.py  test_velero.py
