[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-postcheck"
version = "0.1.0"
description = "Kubernetes cluster post-provisioning verification tool for Kubespray + Viola"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "kubernetes>=29",
    "pyyaml>=6",
    "urllib3>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
k8s-postcheck = "k8s_postcheck.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "BLE"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
