[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-postcheck"
version = "0.1.0"
description = "Kubernetes cluster post-provisioning verification tool for Kubespray + Viola"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "kubernetes>=29",
    "pyyaml>=6",
    "urllib3>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
k8s-postcheck = "k8s_postcheck.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# 계열 프로젝트(openstack-doctor)와 동일한 규칙 집합.
# 방어적 try/except(BLE001)는 API 경계에서 의도적으로 사용하므로 select 하지 않는다.
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # 라인 길이는 포매터가 관리
    "B008",  # typer Option 을 기본 인자로 쓰는 관용구
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
files = ["k8s_postcheck"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
